sz/oracle-em-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-11g-em
  namespace: dbs
spec:
  selector:
    app: oracle-ee-11g
  ports:
    - protocol: TCP
      port: 1158
      targetPort: 1158
  type: LoadBalancer
