sz/oracle-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-11g-bl
  namespace: dbs
spec:
  selector:
    app: oracle-ee-11g
  ports:
    - protocol: TCP
      port: 1521
      targetPort: 1521
  type: LoadBalancer
