sz/oracle-em-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oracle-em-websecre
  namespace: dbs
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`em.sz.yadadev.com`)
    services:
    - name: oracle11g
      port: em
  tls:
    certResolver: le
    domains:
    - main: yadadev.com
      sans:
      - '*.sz.yadadev.com'
